# kid-pc-monitor

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: FAQ.md  agent-protocol.md  cross-user-install.md  lock-hardening-plan.md
scripts/: _launcher.py  install.py  install_web_panel.py  install_web_panel_linux.sh  run_agent.py  run_web_panel.py
src/: host_platform.py  lock_policy.py  pc_cli.py  pc_control.py  remote_client.py  web_panel.py
src/kid_pc_monitor/: __init__.py  agent_auth.py  agent_protocol.py  agent_state.py  host_platform.py  lock_policy.py  network.py  paths.py  pc_cli.py  pc_control.py  remote_client.py  secrets_store.py  shared_secret.py  web_panel.py
src/kid_pc_monitor/static/: panel.css
src/kid_pc_monitor/templates/: base.html  control.html  daily_settings.html  defaults.html  index.html  login.html  logs.html  set_password.html
src/templates/: control.html  index.html  login.html
tests/: test_agent_auth.py  test_agent_protocol.py  test_agent_state.py  test_install_daily_reuse.py  test_install_firewall.py  test_lock_policy.py  test_network.py  test_pc_control.py  test_remote_client.py  test_secrets_store.py  test_shared_secret.py  test_web_panel_auth.py  test_web_panel_security.py  test_web_panel_tls.py  test_windows_lock_detection.py
